# ROS2_Repo

./: .gitignore  README.md  git_auto_push.sh  setup_multi_workspace.sh
arduino_workspace/: README.md
arduino_workspace/src/arduino_bot_description/: CMakeLists.txt  package.xml
arduino_workspace/src/arduinobot_py_examples/: setup.py
arduino_workspace/src/arduinorobot_cpp_ex/: package.xml
current_ws/: README.md
current_ws/src/arduinobot_description/: package.xml
differential_robot_workspace/: README.md
differential_robot_workspace/src/diffrobot_description/: CMakeLists.txt  package.xml
differential_robot_workspace/src/diffrobot_gazebo/: CMakeLists.txt  package.xml
differential_robot_workspace/src/diffrobot_gazebo/launch/: diffrobot_world.launch.py
install/: local_setup.sh  setup.sh
learning_workspace/: README.md
learning_workspace/src/cpp_node/: CMakeLists.txt  package.xml
learning_workspace/src/py_node/: setup.py
learning_workspace/src/use_custom_msg/: package.xml
log/: latest_build  latest_list
robot_arm_workspace/: README.md
robot_arm_workspace/src/robotArm_4DOF/: CMakeLists.txt  package.xml
robot_arm_workspace/src/robot_arm_4dof/: local_setup.sh  package.sh  package.zsh
src/arduino_bot_description/urdf/: arduino_bot.urdf.xacro
src/arduinobot_py_examples/: package.xml
src/arduinorobot_cpp_ex/: CMakeLists.txt
src/custom_msg/: CMakeLists.txt  package.xml
src/diffRobot/: CMakeLists.txt  package.xml
src/py_node/: package.xml
src/robotArm_4DOF/: CMakeLists.txt  package.xml
src/use_custom_msg/: CMakeLists.txt
(+97 files in other folders)
